Changed Default env token to 1500

--- a/.env_template
+++ b/.env_template
@@ -21,7 +21,7 @@ OPENAI_MODEL_NAME="gpt-4"
 
 ### MODEL SETTINGS ###########################################
 TEMPERATURE=1.0
-MAX_TOKENS=800
+MAX_TOKENS=1500 # You'll need to play this setting. Most testing was done around 2500-4000
 FREQUENCY_PENALTY=0.0
 PRESENCE_PENALTY=0.0
 TOP_P=0.0
