--- a/.env_template
+++ b/.env_template
@@ -1,35 +1,41 @@
 ### API SETTINGS #############################################
-#Set the API you want to use. Alternate flips between both.
-#Values: OPENAI, AZURE, ALTERNATE
+#SET YOUR API
+#Values: OPENAI, AZURE, ALTERNATE - WILL USE BOTH APIS
+API_FUNCTION="OPENAI"
 
-#IF ALTERNATE - Will attempt AZURE First
-API_FUNCTION="ALTERNATE"
+#PAUSE TIME BETWEEN CALLS, IF USING ALTERNATE YOU CAN LOWER THIS
 API_THROTTLE=15
 API_RETRY=10
 API_TIMEOUT=60
-# AZURE_MODE_NAME is the name of the model you created in Azure NOT the model type. Example: CatWatch01
-# AZURE_URL Is the URL found in the Azure Playground.
+
 ### AZURE ####################################################
-AZURE_URL=""
-AZURE_API_KEY=
-AZURE_MODEL_NAME=""
+# Apply for Azure here: https://customervoice.microsoft.com/Pages/ResponsePage.aspx?id=v4j5cvGGr0GRqy180BHbR7en2Ais5pxKtso_Pz4b1_xUOFA5Qk1UWDRBMjg0WFhPMkIzTzhKQ1dWNyQlQCN0PWcu
+# Then Apply for GPT-4 access. Note: Take Weeks, OpenAI is isntant. https://customervoice.microsoft.com/Pages/ResponsePage.aspx?id=v4j5cvGGr0GRqy180BHbR7en2Ais5pxKtso_Pz4b1_xUM003VEJPRjRSOTZBRVZBV1E5N1lWMk1XUyQlQCN0PWcu
+# AZURE_MODE_NAME is the name of the model you created in Azure NOT the model type. Example: CatWatch01
+AZURE_URL="https://{YOURURL}.openai.azure.com/openai/deployments/{YOUR MODEL NAME}/chat/completions?api-version=2023-03-15-preview"
+AZURE_API_KEY="APIKEY"
+# AZURE_MODE_NAME is the name of the model you created in Azure NOT the model type. Example: CatWatch01
+AZURE_MODEL_NAME="MODELNAME"
 
 ### OPENAI####################################################
-OPENAI_URL=""
-OPENAI_API_KEY=
+# Get one here: https://platform.openai.com/account/api-keys
+OPENAI_URL="https://api.openai.com/v1/chat/completions"
+OPENAI_API_KEY="APIKEY"
 OPENAI_MODEL_NAME="gpt-4"
 
 ### MODEL SETTINGS ###########################################
-TEMPERATURE=1.0
+TEMPERATURE=0.5
 MAX_TOKENS=1500 # You'll need to play this setting. Most testing was done around 2500-4000
 FREQUENCY_PENALTY=0.0
 PRESENCE_PENALTY=0.0
 TOP_P=0.0
 STOP=None
+
 ### GOOGLE SEARCH API ########################################
 # API KEY https://cloud.google.com/
 GOOGLE_API_KEY=
 CUSTOM_SEARCH_ENGINE_ID=""
-### DEBUG ####################################################
 
+### DEBUG ####################################################
+#VERBOSE LOGGED, LEAVE DISABLED
 DEBUG_CODE=False
