--- a/.env_template
+++ b/.env_template
@@ -5,13 +5,13 @@ API_FUNCTION="OPENAI"
 
 #PAUSE TIME BETWEEN CALLS, IF USING ALTERNATE YOU CAN LOWER THIS
 API_THROTTLE=15
-API_RETRY=10
-API_TIMEOUT=60
+API_RETRY=15
+API_TIMEOUT=90
 
 ### AZURE ####################################################
-# Apply for Azure here: https://customervoice.microsoft.com/Pages/ResponsePage.aspx?id=v4j5cvGGr0GRqy180BHbR7en2Ais5pxKtso_Pz4b1_xUOFA5Qk1UWDRBMjg0WFhPMkIzTzhKQ1dWNyQlQCN0PWcu
-# Then Apply for GPT-4 access. Note: Take Weeks, OpenAI is isntant. https://customervoice.microsoft.com/Pages/ResponsePage.aspx?id=v4j5cvGGr0GRqy180BHbR7en2Ais5pxKtso_Pz4b1_xUM003VEJPRjRSOTZBRVZBV1E5N1lWMk1XUyQlQCN0PWcu
-# AZURE_MODE_NAME is the name of the model you created in Azure NOT the model type. Example: CatWatch01
+# Apply for Azure here: https://tinyurl.com/azuresignup1
+# Apply for GPT-4: https://tinyurl.com/gpt4azureaccess
+
 AZURE_URL="https://{YOURURL}.openai.azure.com/openai/deployments/{YOUR MODEL NAME}/chat/completions?api-version=2023-03-15-preview"
 AZURE_API_KEY="APIKEY"
 # AZURE_MODE_NAME is the name of the model you created in Azure NOT the model type. Example: CatWatch01
@@ -25,7 +25,7 @@ OPENAI_MODEL_NAME="gpt-4"
 
 ### MODEL SETTINGS ###########################################
 TEMPERATURE=0.5
-MAX_TOKENS=1500 # You'll need to play this setting. Most testing was done around 2500-4000
+MAX_TOKENS=1500 # Adjust as needed
 FREQUENCY_PENALTY=0.0
 PRESENCE_PENALTY=0.0
 TOP_P=0.0
